--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,22 @@ bitroom = "bitroom.cli:cli"
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
+
+[tool.ruff]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # Pyflakes
+    "I",  # isort
+    "N",  # pep8-naming
+]
+line-length = 88  # Same as black
+ignore-init-module-imports = true
+
 [tool.pdm]
 [tool.pdm.dev-dependencies]
 dev = [
 ]
+
+[tool.pdm.scripts]
+lint = "pre-commit run --all-files"
