--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "bitroom"
-version = "0.1.0"
-description = "BIT 场地预约查询接口。"
+version = "0.1.1"
+description = "BIT 场地预约查询接口（bitroom）"
 authors = [
     {name = "Y.D.X.", email = "73375426+YDX-2147483647@users.noreply.github.com"},
 ]
