Squashed commit of the following:
commit 0548fe1b395d3f401746819581eef04eddaa520c
Author: Y.D.X <73375426+YDX-2147483647@users.noreply.github.com>
Date:   Fri May 5 08:06:50 2023 +0800

    ci: Lock urllib3 version

    Resolves #2

commit 05676826d5cd9b1f633f4b7b3bb0aa5eaf186268
Author: Y.D.X <73375426+YDX-2147483647@users.noreply.github.com>
Date:   Thu May 4 23:52:38 2023 +0800

    ci: Debug pdm dependencies

    What's requests version?

commit 7726e85cdfcfb5fa9fa1af871d3ed85d305cbcd9
Author: Y.D.X <73375426+YDX-2147483647@users.noreply.github.com>
Date:   Thu May 4 23:18:02 2023 +0800

    ci: Revert to python 3.11

commit 3501e6b57a63a5ad0fa15da13e97c2dd5a3eafa0
Author: Y.D.X <73375426+YDX-2147483647@users.noreply.github.com>
Date:   Thu May 4 23:12:17 2023 +0800

    ci: Try python 3.10

commit 92f3ccce83df4ea2bd585b3cae080bf631dab2b5
Author: Y.D.X <73375426+YDX-2147483647@users.noreply.github.com>
Date:   Thu May 4 23:03:08 2023 +0800

    ci: Add '-v' to see the detailed traceback

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - v*
+  workflow_dispatch:
 
 jobs:
   pypi-publish:
@@ -19,6 +20,8 @@ jobs:
         with:
           python-version: 3.11
           cache: true
+        env:
+          PDM_DEPS: 'urllib3<2'
       - name: Build distributions
         run: pdm build
       - name: Publish to PyPI
