--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "click>=8.1.3",
     "platformdirs>=3.5.0",
     'tomli>=2.0.1; python_version < "3.11"',
+    "more-itertools>=9.1.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -37,6 +38,13 @@ Repository = "https://github.com/YDX-2147483647/bitroom"
 [project.scripts]
 bitroom = "bitroom.cli:cli"
 
+[project.optional-dependencies]
+# Terminal user interface
+tui = [
+    "rich>=13.3.5",
+    "textual>=0.23.0",
+]
+
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -56,6 +64,7 @@ ignore-init-module-imports = true
 [tool.pdm]
 [tool.pdm.dev-dependencies]
 dev = [
+    "textual[dev]>=0.23.0",
 ]
 
 [tool.pdm.scripts]
