--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
     rev: v2.2.4
     hooks:
       - id: codespell
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.15.0
+    hooks:
+      - id: typos
